<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/arrowback"
        android:layout_margin="10dp"
        android:layout_width="30dp"
        android:src="@drawable/startkloudbackarrow"
        android:layout_height="30dp"/>


    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:text="@string/join_meeting"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_below="@+id/tv"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/meetingidhead"
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:text="@string/input_startkloud_meeing_id_head"
            android:visibility="invisible"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/meetingid"
            android:layout_width="match_parent"
            android:hint="@string/input_startkloud_meeing_id"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_height="40dp"/>
       <TextView
        android:layout_width="match_parent"
        android:background="@color/divider"
        android:layout_height="1dp"/>

        <TextView
            android:id="@+id/meetingnamehead"
            android:visibility="invisible"
            android:layout_marginTop="30dp"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:text="@string/input_startkloud_name_head"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/meetingname"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:hint="@string/input_startkloud_name"
            android:background="@color/white"
            android:layout_height="40dp"/>
        <TextView
            android:layout_width="match_parent"
            android:background="@color/divider"
            android:layout_height="1dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/joinmeeting"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/peertimeselect_bg2"
        android:layout_alignParentBottom="true"
        android:text="@string/join_meeting"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginBottom="100dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/privacy_statement"
            android:textColor="@color/skyblue"
            android:textSize="12sp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:text="@string/and"
            android:textSize="12sp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/skyblue"
            android:textSize="12sp"
            android:text="@string/useteamandservice"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</RelativeLayout>