<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/editdocumentname"
        android:textColor="#000"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editcontent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/inputdocumentname"
        android:minHeight="40dp"
        android:padding="5dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Cancel"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/save"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/upload"
            android:textColor="@color/green"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>