<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootlayout"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/headw"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/main_color">

        <LinearLayout
            android:id="@+id/backll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/return_arrow" />

            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="#fff"
                android:textSize="16sp" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/pendingcourse"
            android:textColor="#fff"
            android:textSize="18sp" />




    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myklassid" />

        <TextView
            android:id="@+id/courseid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="111" />
    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/otherklassid" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="5dp">

        <EditText
            android:id="@+id/roomet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/join_bg"
            android:hint="@string/joinroom"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/joinroom2"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/newfriend_bgtwo"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/join2"
            android:textColor="@color/qianred"
            android:textSize="16sp" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:text="@string/ongoninglesson"
        android:textSize="16sp" />

    <ListView
        android:id="@+id/courseList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:divider="@null"
        android:scrollbars="none"></ListView>


</LinearLayout>