<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    android:orientation="vertical" >

    <include layout="@layout/common_title" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/pc_white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PersonInfoTextLabelStyle"
            android:layout_weight="3"
            android:text="@string/now_password"/>

        <EditText
            android:id="@+id/pc_ord_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@color/nocolor"
            android:gravity="center_vertical|right"
            android:hint="@string/input_password"
            android:password="true"
            style="@style/PersonInfoTextContentStyle" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="15dp"
        android:background="@color/pc_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/pc_white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PersonInfoTextLabelStyle"
            android:layout_weight="3"
            android:text="@string/new_password" />

        <EditText
            android:id="@+id/pc_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@color/nocolor"
            android:gravity="center_vertical|right"
            android:hint="@string/input_newpassword"
            android:inputType="textPassword"
            style="@style/PersonInfoTextContentStyle" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="15dp"
        android:background="@color/pc_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/pc_white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PersonInfoTextLabelStyle"
            android:layout_weight="3"
            android:text="@string/sure_password"/>

        <EditText
            android:id="@+id/pc_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@color/nocolor"
            android:gravity="center_vertical|right"
            android:hint="@string/input_again"
            android:inputType="textPassword"
            style="@style/PersonInfoTextContentStyle" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_pc_done"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_login_btn"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/Finish"
        android:textColor="@color/white"
        android:textSize="18dp" />

</LinearLayout>